--- a/template_clean.Rmd
+++ b/template_clean.Rmd
@@ -1,8 +1,14 @@
 ---
 title: "Untitled"
-author: "MS"
+author: 
+  name: "MS"
+  email: "michael.salvermoser@med.uni-muenchen.de"
 date: "`r format(Sys.time(), '%d %B, %Y')`"
-output: html_document
+output: 
+  html_document:
+    code_folding: hide
+    toc: true
+    toc_float: true
 ---
 
 ```{r setup, include=FALSE}
